// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupLoadingOverlay Component should match snapshot 1`] = `
.c0 {
  z-index: 1;
  position: absolute;
  background: rgba(255,255,255,0.8);
  margin: 0;
  padding: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-backdrop-filter: blur(1px) grayscale(100%);
  backdrop-filter: blur(1px) grayscale(100%);
}

<div
  class="c0"
/>
`;

exports[`PopupLoadingOverlay Component should match snapshot with darkTheme 1`] = `
.c0 {
  z-index: 1;
  position: absolute;
  background: rgba(25,25,25,0.8);
  margin: 0;
  padding: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-backdrop-filter: blur(1px) grayscale(100%);
  backdrop-filter: blur(1px) grayscale(100%);
}

<div
  class="c0"
/>
`;

exports[`PopupLoadingOverlay Component should match snapshot with lightTheme 1`] = `
.c0 {
  z-index: 1;
  position: absolute;
  background: rgba(255,255,255,0.8);
  margin: 0;
  padding: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-backdrop-filter: blur(1px) grayscale(100%);
  backdrop-filter: blur(1px) grayscale(100%);
}

<div
  class="c0"
/>
`;
